:construction_worker: Fix small spacing and alignment issues

--- a/_styles/scss/components/_about.scss
+++ b/_styles/scss/components/_about.scss
@@ -26,10 +26,7 @@
       margin-top: $spacing-half;
 
       @media (min-width: $bp-xs) {
-        margin-top: 0;
-        +.c-about__list-item {
-          margin-top: $spacing-half;
-        }
+        margin-top: $spacing-half;
       }
     }
   }
