--- a/_styles/scss/components/_nav.scss
+++ b/_styles/scss/components/_nav.scss
@@ -10,7 +10,7 @@
 	&__item {
 		@include font-4;
 		+.c-nav__item {
-			margin-top: $spacing-tiny;
+			margin-top: $spacing-half;
 
 			@media (min-width: 45rem) {
 				margin-top: 0;
