--- a/_styles/scss/components/_work.scss
+++ b/_styles/scss/components/_work.scss
@@ -99,7 +99,17 @@
 
     &-icon {
       margin-left: $spacing-half;
+
+      @media (min-width: $bp-xs) {
+        margin-top: 1px;
+      }
     }
+  }
+
+  span.c-work__meta-middot {
+    font-weight: 700;
+    margin-top: -2px;
+    margin-left: $spacing-half;
   }
 
   &__item {
@@ -129,14 +139,5 @@
     &-apple {
       color: #000 !important;
     }
-  }
-}
-
-span.c-work__meta-middot {
-  font-weight: 700;
-  margin-left: $spacing-half;
-
-  @media (min-width: $bp-xs) {
-    margin-top: -2px;
   }
 }
